--- a/_pages/404.md
+++ b/_pages/404.md
@@ -5,7 +5,7 @@ sitemap: false
 permalink: /404.html
 ---
 
-Sorry, but the page you are trying to view does not exist. If there is something specific you are looking for, please email me at larayang@stanford.edu and I'd be happy to assist.
+Sorry, but the page you are trying to view does not exist. If there is something specific you are looking for, please email me at msingell@stanford.edu and I'd be happy to assist.
 
 <script type="text/javascript">
   var GOOG_FIXURL_LANG = 'en';
